<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >SMS Driving App
    </string>
    <string name="action_settings" >Settings
    </string>
    <string name="driving_state" >Press button to toggle driving state.
    </string>
    <string name="input_field" >Enter the message you would like sent to those who text you while driving:
    </string>
    <string name="textEntry" >Type message here…
    </string>
    <string name="defaultMessage" >Hey, I am driving at the moment. I\'ll respond later.
    </string>
    <string name="currentString" >CURRENTLY SAVED MESSAGE:
    </string>
    <string name="automatedWarning" >[This is an automated message.] </string>

</resources>
