<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SMSMain">

    <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New ToggleButton"
            android:id="@+id/drivingStateButton"
            android:onClick="onDrivingButtonClicked"
            android:layout_above="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="17dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/driving_state"
            android:id="@+id/textView"
            android:layout_above="@+id/drivingStateButton"
            android:layout_alignLeft="@+id/textView2"
            android:layout_marginBottom="19dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_field"
            android:id="@+id/textView2"
            android:layout_above="@+id/editText"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="13dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:text="@string/textEntry"
            android:layout_alignParentEnd="false" android:inputType="textCapSentences"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignRight="@+id/textView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/currentString"
            android:id="@+id/textView3"
            android:layout_below="@+id/editText"
            android:layout_alignLeft="@+id/editText"
            android:layout_marginTop="15dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/defaultMessage"
            android:id="@+id/textView4"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/editText"
            android:layout_marginBottom="22dp"/>
</RelativeLayout>
